--- a/notebooks/Homecred - Data cleaning - Advanced.ipynb
+++ b/notebooks/Homecred - Data cleaning - Advanced.ipynb
@@ -243,8 +243,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ID_fin_included_df = list(credit_card_df['SK_ID_CURR']) + list(bureau_df['SK_ID_CURR'])\n",
-    "ID_fin_included_df = list(dict.fromkeys(ID_fin_included_df))"
+    "ID_fin_included = list(credit_card_df['SK_ID_CURR']) + list(bureau_df['SK_ID_CURR'])\n",
+    "ID_fin_included = list(dict.fromkeys(ID_fin_included))"
    ]
   },
   {
@@ -254,8 +254,9 @@
    "outputs": [],
    "source": [
     "ID_all_applicants = application_train_df['SK_ID_CURR']\n",
-    "ID_fin_excluded = list(set(list(ID_all_applicants)) - set(ID_fin_included_df))\n",
-    "ID_fin_excluded_df = pd.DataFrame(ID_fin_excluded, columns=['SK_ID_CURR'])"
+    "ID_fin_excluded = list(set(list(ID_all_applicants)) - set(ID_fin_included))\n",
+    "ID_fin_excluded_df = pd.DataFrame(ID_fin_excluded, columns=['SK_ID_CURR'])\n",
+    "ID_fin_included_df = pd.DataFrame(ID_fin_included, columns=['SK_ID_CURR'])"
    ]
   },
   {
@@ -322,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +385,7 @@
        "(356255, 114)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +442,7 @@
        "(346278, 114)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +564,7 @@
        "0"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +596,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +640,7 @@
        "['TARGET', 'OCCUPATION_TYPE', 'EMERGENCYSTATE_MODE']"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +707,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +736,7 @@
        "(321689, 67)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -746,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +768,7 @@
        "(321689, 104)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -801,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -854,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -864,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +890,7 @@
        "(321711, 1265)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -900,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -909,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -918,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -991,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1003,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1014,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1023,7 +1024,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1047,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1056,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1065,7 +1066,7 @@
        "120"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1085,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1120,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1251,7 +1252,7 @@
        "[1170 rows x 3 columns]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1263,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1278,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1288,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1297,25 +1298,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        VIF Factor                                           features\n",
-      "0      8605.487041                     FLAG_EMP_PHONE_AMT_ANNUITY_log\n",
-      "1     16559.473467                DAYS_ID_PUBLISH_AMT_GOODS_PRICE_log\n",
-      "2        23.906666        REGION_RATING_CLIENT_REG_CITY_NOT_WORK_CITY\n",
-      "3    166697.685981                  DAYS_EMPLOYED_AMT_GOODS_PRICE_log\n",
-      "4        35.654930                  DAYS_BIRTH_DAYS_LAST_PHONE_CHANGE\n",
-      "..             ...                                                ...\n",
-      "100       7.479148  REGION_POPULATION_RELATIVE_DAYS_LAST_PHONE_CHANGE\n",
-      "101      16.743933     HOUR_APPR_PROCESS_START_REG_CITY_NOT_WORK_CITY\n",
-      "102      61.231028                       DAYS_EMPLOYED_FLAG_EMP_PHONE\n",
-      "103     879.277085            FLAG_CONT_MOBILE_REG_CITY_NOT_WORK_CITY\n",
-      "104    1602.906649                          DAYS_BIRTH_creditVSincome\n",
+      "        VIF Factor                                     features\n",
+      "0      1737.858197       REG_CITY_NOT_WORK_CITY_AMT_ANNUITY_log\n",
+      "1    202446.379017                FLAG_EMP_PHONE_AMT_CREDIT_log\n",
+      "2    189084.031346                       REG_CITY_NOT_LIVE_CITY\n",
+      "3    218478.018133                        ORGANIZATION_TYPE_XNA\n",
+      "4      6923.964018                   NAME_INCOME_TYPE_Pensioner\n",
+      "..             ...                                          ...\n",
+      "100     132.790273             DAYS_BIRTH_DAYS_REGISTRATION_log\n",
+      "101      60.437254        DAYS_ID_PUBLISH_DAYS_REGISTRATION_log\n",
+      "102      21.206061        DAYS_EMPLOYED_HOUR_APPR_PROCESS_START\n",
+      "103   16559.473464          DAYS_ID_PUBLISH_AMT_GOODS_PRICE_log\n",
+      "104  168224.698608  DAYS_LAST_PHONE_CHANGE_AMT_INCOME_TOTAL_log\n",
       "\n",
       "[105 rows x 2 columns]\n"
      ]
@@ -1332,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1366,13 +1367,13 @@
        "      <th>0</th>\n",
        "      <td>DAYS_BIRTH_AMT_INCOME_TOTAL_log</td>\n",
        "      <td>0.082234</td>\n",
-       "      <td>912.554540</td>\n",
+       "      <td>912.554538</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>DAYS_BIRTH_AMT_GOODS_PRICE_log</td>\n",
        "      <td>0.081817</td>\n",
-       "      <td>26934.807986</td>\n",
+       "      <td>26934.807850</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1448,8 +1449,8 @@
        "1169                                         FLAG_MOBIL       NaN   \n",
        "\n",
        "        VIF Factor  \n",
-       "0       912.554540  \n",
-       "1     26934.807986  \n",
+       "0       912.554538  \n",
+       "1     26934.807850  \n",
        "2       132.790273  \n",
        "3              NaN  \n",
        "4              NaN  \n",
@@ -1463,7 +1464,7 @@
        "[1170 rows x 3 columns]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1475,30 +1476,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['CNT_FAM_MEMBERS_REG_CITY_NOT_LIVE_CITY',\n",
-       " 'DAYS_ID_PUBLISH_DAYS_LAST_PHONE_CHANGE',\n",
+       "['CNT_FAM_MEMBERS_DAYS_LAST_PHONE_CHANGE',\n",
+       " 'REG_CITY_NOT_WORK_CITY_FLAG_DOCUMENT_3',\n",
+       " 'FLAG_EMP_PHONE_FLAG_DOCUMENT_3',\n",
+       " 'REGION_POPULATION_RELATIVE_DAYS_ID_PUBLISH',\n",
+       " 'NAME_INCOME_TYPE_Working',\n",
+       " 'REGION_POPULATION_RELATIVE_DAYS_EMPLOYED',\n",
        " 'CNT_FAM_MEMBERS_REG_CITY_NOT_WORK_CITY',\n",
        " 'REG_CITY_NOT_LIVE_CITY_FLAG_DOCUMENT_3',\n",
-       " 'CODE_GENDER_M',\n",
+       " 'DAYS_ID_PUBLISH_DAYS_LAST_PHONE_CHANGE',\n",
        " 'DAYS_EMPLOYED_DAYS_LAST_PHONE_CHANGE',\n",
        " 'REGION_POPULATION_RELATIVE_DAYS_BIRTH',\n",
-       " 'FLAG_EMP_PHONE_FLAG_DOCUMENT_3',\n",
-       " 'REG_CITY_NOT_WORK_CITY_FLAG_DOCUMENT_3',\n",
-       " 'REGION_POPULATION_RELATIVE_DAYS_EMPLOYED',\n",
+       " 'CODE_GENDER_M',\n",
        " 'NAME_EDUCATION_TYPE_Secondary / secondary special',\n",
-       " 'NAME_INCOME_TYPE_Working',\n",
-       " 'REGION_POPULATION_RELATIVE_DAYS_ID_PUBLISH',\n",
-       " 'CNT_FAM_MEMBERS_DAYS_LAST_PHONE_CHANGE',\n",
+       " 'CNT_FAM_MEMBERS_REG_CITY_NOT_LIVE_CITY',\n",
        " 'REGION_POPULATION_RELATIVE_DAYS_LAST_PHONE_CHANGE']"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1511,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1522,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1531,7 +1532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1540,7 +1541,7 @@
        "(321711, 18)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1558,7 +1559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1572,7 +1573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1585,7 +1586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1595,7 +1596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1606,7 +1607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1616,15 +1617,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
     "# standardise the features\n",
+    "x_train = x_train.reset_index(drop=True).copy()\n",
+    "x_test = x_test.reset_index(drop=True).copy()\n",
+    "test_df = test_df.reset_index(drop=True).copy()\n",
+    "\n",
     "ss = StandardScaler()\n",
-    "x_train = pd.DataFrame(ss.fit_transform(x_train), columns=x_train.columns)\n",
-    "x_test = pd.DataFrame(ss.fit_transform(x_test), columns=x_test.columns)\n",
-    "test_df = pd.DataFrame(ss.fit_transform(test_df), columns=test_df.columns)"
+    "num_features = ['REGION_POPULATION_RELATIVE_DAYS_LAST_PHONE_CHANGE', 'REGION_POPULATION_RELATIVE_DAYS_EMPLOYED', 'CNT_FAM_MEMBERS_REG_CITY_NOT_WORK_CITY', 'REGION_POPULATION_RELATIVE_DAYS_BIRTH', 'DAYS_EMPLOYED_DAYS_LAST_PHONE_CHANGE', 'CNT_FAM_MEMBERS_DAYS_LAST_PHONE_CHANGE', 'REGION_POPULATION_RELATIVE_DAYS_ID_PUBLISH', 'DAYS_ID_PUBLISH_DAYS_LAST_PHONE_CHANGE']\n",
+    "x_train[num_features] = pd.DataFrame(ss.fit_transform(x_train[num_features]))\n",
+    "x_test[num_features] = pd.DataFrame(ss.fit_transform(x_test[num_features]))\n",
+    "test_df[num_features] = pd.DataFrame(ss.fit_transform(test_df[num_features]))"
    ]
   },
   {
@@ -1636,7 +1642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1647,7 +1653,8 @@
     "y_test.to_csv(cleaned_folder + 'y_test.csv', index=False)\n",
     "test_df.to_csv(cleaned_folder + 'test_df.csv', index=False)\n",
     "test_ids_df.to_csv(cleaned_folder + 'test_ids_df.csv', index=False)\n",
-    "ID_fin_excluded_df.to_csv(cleaned_folder + 'IDs_fin_excluded.csv', index=False)"
+    "ID_fin_excluded_df.to_csv(cleaned_folder + 'IDs_fin_excluded.csv', index=False)\n",
+    "ID_fin_included_df.to_csv(cleaned_folder + 'ID_fin_included_df.csv', index=False)"
    ]
   }
  ],
