--- a/notebooks/Homecred - ML modelling - Advanced.ipynb
+++ b/notebooks/Homecred - ML modelling - Advanced.ipynb
@@ -1459,7 +1459,7 @@
     "ax = fin_excluded_df['TARGET'].value_counts(normalize=False).plot(kind='bar',\n",
     "                                                                  title='Predicted financially excluded customers with payment difficulties',\n",
     "                                                                  ylabel='Financially excluded')\n",
-    "fig = ax.get_figure()\n",
+    "fig = ax.get_figure()mod\n",
     "fig.savefig(output_folder + 'figure.png')"
    ]
   },
