--- a/notebooks/Homecred - Data cleaning - Basic.ipynb
+++ b/notebooks/Homecred - Data cleaning - Basic.ipynb
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +419,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Working                 183307\n",
+       "Commercial associate     83019\n",
+       "Pensioner                64635\n",
+       "State servant            25235\n",
+       "Other2                      59\n",
+       "Name: NAME_INCOME_TYPE, dtype: int64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "application_df['NAME_INCOME_TYPE'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +491,7 @@
        "0"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +524,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +610,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +639,7 @@
        "(331848, 68)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +671,7 @@
        "(331848, 105)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +768,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -767,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -776,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +810,7 @@
        "15"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -798,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -816,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +864,7 @@
        "(44880, 17)"
       ]
      },
-     "execution_count": 259,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -850,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -863,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -884,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -904,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -923,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
